--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
   <!-- prism link -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/CDNSFree2/PrismJS@latest/prism.min.css">
-
+  <!-- highlight.js -->
+  <!-- <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.2.0/styles/default.min.css"> -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
   <title>Code-Blog</title>
@@ -42,7 +43,8 @@
   </script>
   <!-- PrismJs script -->
   <script src="https://cdn.jsdelivr.net/gh/CDNSFree2/PrismJS@latest/prism.min.js"></script>
-
+  <!-- highlight.js -->
+  <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.2.0/highlight.min.js"></script> -->
 </body>
 
 </html>
