--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
+  <link rel="stylesheet" type="text/css" href="prism.css">
   <title>Code-Blog</title>
 </head>
 
@@ -38,8 +38,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
   </script>
-  <script src="https://cdn.tiny.cloud/1/3brobpodeqnay7svjrf7eqp15lebr1fseo6216cwt6h90sjl/tinymce/5/tinymce.min.js"
-    referrerpolicy="origin"></script>
+  <!-- <script src="https://cdn.tiny.cloud/1/3brobpodeqnay7svjrf7eqp15lebr1fseo6216cwt6h90sjl/tinymce/5/tinymce.min.js"
+    referrerpolicy="origin"></script> -->
 
   <script src="prism.js" data-manual></script>
   <script src="tinymce.js"></script>
