--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
   <meta name="description" content="Web site created using create-react-app" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="stylesheet" type="text/css" href="prism.css">
+
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -40,7 +42,9 @@
   </script>
   <script src="https://cdn.tiny.cloud/1/3brobpodeqnay7svjrf7eqp15lebr1fseo6216cwt6h90sjl/tinymce/5/tinymce.min.js"
     referrerpolicy="origin"></script>
-
+  <script src="https://cdn.jsdelivr.net/npm/highlightjs-line-numbers.js@2.6.0/dist/highlightjs-line-numbers.min.js">
+  </script>
+  <script src="//cdn.jsdelivr.net/npm/highlightjs-line-numbers.js@2.8.0/dist/highlightjs-line-numbers.min.js"></script>
 
   <script src="prism.js" data-manual></script>
   <script src="tinymce.js"></script>
