--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Web site created using create-react-app" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  <link rel="stylesheet" type="text/css" href="prism.css">
+  <!-- <link rel="stylesheet" type="text/css" href="prism.css"> -->
 
   <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -18,6 +18,8 @@
   <!-- Bootstrap cdn -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="prism.css">
+  <link rel="stylesheet" href="/path/to/styles/default.min.css">
 
   <!-- Fontawsome Icon Cdn -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
@@ -27,7 +29,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <link rel="stylesheet" type="text/css" href="prism.css">
+  <!-- <link rel="stylesheet" type="text/css" href="prism.css"> -->
   <title>Code-Blog</title>
 </head>
 
@@ -42,9 +44,14 @@
   </script>
   <script src="https://cdn.tiny.cloud/1/3brobpodeqnay7svjrf7eqp15lebr1fseo6216cwt6h90sjl/tinymce/5/tinymce.min.js"
     referrerpolicy="origin"></script>
-  <script src="https://cdn.jsdelivr.net/npm/highlightjs-line-numbers.js@2.6.0/dist/highlightjs-line-numbers.min.js">
+
+  <!-- <script src="https://cdn.jsdelivr.net/npm/highlightjs-line-numbers.js@2.6.0/dist/highlightjs-line-numbers.min.js">
   </script>
-  <script src="//cdn.jsdelivr.net/npm/highlightjs-line-numbers.js@2.8.0/dist/highlightjs-line-numbers.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/highlightjs-line-numbers.js@2.8.0/dist/highlightjs-line-numbers.min.js"></script> -->
+  <script src="/path/to/highlight.min.js"></script>
+  <script>
+    hljs.highlightAll();
+  </script>
 
   <script src="prism.js" data-manual></script>
   <script src="tinymce.js"></script>
